# sinmun-go

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml
app/: page.tsx
app/api/faq/: route.ts
lib/: db.ts
note/: 1_API.ipynb  faq20072.db  faq20072.db-journal  faq_1.db
