[project]
name = "sinmun-go"
version = "0.4.0"
description = "대한민국 국민권익위원회 국민신문고 정부민원안내콜센터 110 수집 민원 데이터 종합적으로 분석 제공 검색"
authors = [
    {name = "ppabam", email = "tom@diginori.com"},
]
dependencies = []
requires-python = ">=3.10"
readme = "README.md"
license = {text = "GNU"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "jupyterlab>=4.4.2",
]
